@@ -65,6 +65,7 @@ struct dm_task {
 	int cookie_set;
 	int new_uuid;
 	int secure_data;
+	int enable_checks;
 
 	char *uuid;
 };
